--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@astrojs/db": "^0.17.2",
     "@astrojs/node": "^9.4.4",
     "@lucide/astro": "^0.544.0",
-    "astro": "^5.14.1"
+    "astro": "^5.14.1",
+    "astro-webrings": "^0.1.2"
   },
   "packageManager": "pnpm@10.17.1+sha512.17c560fca4867ae9473a3899ad84a88334914f379be46d455cbf92e5cf4b39d34985d452d2583baf19967fa76cb5c17bc9e245529d0b98745721aa7200ecaf7a"
 }
